--- a/index.html
+++ b/index.html
@@ -1,12 +1,61 @@
 ---
 layout: default
 ---
-
-<div id="home">
-  <h1>Blog Posts</h1>
-  <ul class="posts">
-    {% for post in site.posts %}
-      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
-    {% endfor %}
-  </ul>
+<div class="row">
+	<div class="col-sm-10">
+	{% include message.md %}
+	</div>
 </div>
+
+<div class="col-sm-12" id="stories">  
+	<div class="page-header text-muted divider">
+		Blog Posts
+	</div>
+</div>
+
+{% for post in paginator.posts %}
+<div class="row">    
+	<div class="col-sm-10">
+		<h3><a href="{{ post.url }}">{{ post.title }}</a></h3>
+		<div class="excerpt">
+			{{ post.excerpt }}
+			<a href="{{ post.url }}">Read More &raquo;</a>
+		</div>
+		<h4><small class="text-muted">{{ post.date | date_to_string }}</small></h4>
+	</div>
+	{% comment %}
+	<div class="col-sm-2">
+		<a href="#" class="pull-right"><img src="/assets/example/bg_dogcat.jpg" class="img-circle"></a>
+	</div> 
+	{% endcomment %}
+</div>
+
+<div class="row divider">    
+	<div class="col-sm-12"><hr></div>
+</div>
+{% endfor %}
+
+{% if paginator.total_pages > 1 %}
+<!-- Pagination -->
+<div class="row">
+	<div class="col-sm-4 text-left">
+	{% if paginator.previous_page %}
+	<a href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}" class="previous">&laquo; Prev</a>
+	{% else %}
+	<span class="previous">&laquo; Prev</span>
+	{% endif %}
+	</div>
+
+	<div class="col-sm-4 text-center">
+	<span class="page_number">Page: {{ paginator.page }} of {{ paginator.total_pages }}</span>
+	</div>
+	
+	<div class="col-sm-4 text-right">
+	{% if paginator.next_page %}
+	<a href="{{ paginator.next_page_path | prepend: site.baseurl | replace: '//', '/' }}" class="next">Next &raquo;</a>
+	{% else %}
+	<span class="next">Next &raquo;</span>
+	{% endif %}
+	</div>
+</div>
+{% endif %}
